fix: actualizacion de cv

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
     </section>
     <!-- End of Contact Section -->
     <div class="cookie-banner">
-        <p>Este sitio web utiliza cookies para mejorar tu experiencia. Al continuar navegando, aceptas nuestro uso de cookies.</p>
+        <p>Este sitio web utiliza cookies para mejorar tu experiencia. Al continuar navegando, aceptas nuestro uso de cookies. <a href="privacidad.html">Política de Privacidad</a></p>
         <button   
        class="accept-cookies">Aceptar</button>
       </div>
