fix: actualizacion imagenes y meta descripcion

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Portafolio de servios de Carlos Mario Gomez Gelvez | Frontend Developer">
-    <meta property="og:site_name" content="Portafolio de servios de Carlos Mario Gomez Gelvez | Frontend Developer"/>
-    <meta property="og:title" content="Frontend Developer | Carlos Gomez"/>
+    <meta property="og:site_name" content="Carlos Mario Gomez Gelvez | Frontend Developer"/>
+    <meta property="og:title" content="Carlos Mario Gomez Gelvez | Frontend Developer"/>
     <meta property="og:image" content=“https://gelvezz23.github.io/assets/imgs/man2.svg” />
     <meta name="author" content="gelvezz23">
     <title>Frontend Developer | Carlos Gomez</title>
