feat: update cv

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <a class="social-item" href="https://www.linkedin.com/in/carlosmariogomezg/"><i class="ti-linkedin"></i></a>
                     <a class="social-item" href="https://devhome.dev/"><i class="ti-world"></i></a>
                     <a class="social-item" href="https://www.instagram.com/carlosmariogomezgelvez/"><i class="ti-instagram"></i></a>
-                    <a class="social-item" href="https://www.youtube.com/@SEMILLEROSILUXUFPS"><i class="ti-youtube"></i></a>
+                    <a class="social-item" href="https://www.youtube.com/@gelvezz23"><i class="ti-youtube"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
